--- a/www/libs/jTinder-master/css/jTinder.css
+++ b/www/libs/jTinder-master/css/jTinder.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-    overflow: hidden;
+    overflow-y: scroll;: ;
 }
 
 /* Wrapper with padding */
@@ -29,7 +29,7 @@ body {
     height: 100%;*/
 }
 
-#tinderslide li {
+#tinderslide li  {
     display: block;
     width: 100%;
 
