--- a/www/css/index.css
+++ b/www/css/index.css
@@ -129,7 +129,7 @@ padding: 15px;
 }
 .wordwrap{
     width: 100%;
-    font-size: 8px;
+    font-size: 11px;
     font-weight: bold;
     letter-spacing: 0;
     line-height: 1;
@@ -233,9 +233,10 @@ padding: 15px;
 .onSwitch{
     border-radius: 20px;
     color: #ff7800 !important;
+    padding: 0px 3rem;
 }
 .switchBox{
-    width: 244px;
+    width: 300px;
     border-radius: 20px ;
     border: 2px solid grey;
     margin: auto;
@@ -244,6 +245,7 @@ padding: 15px;
 .offSwitch{
     background-color: transparent !important;
     color: white !important;
+	padding: 0 3rem;
 }
 .sendBtn{
     border-radius: 50% !important;
@@ -255,6 +257,7 @@ padding: 15px;
     position: absolute;
     bottom: 0;
     width: 100%;
+	margin-bottom:0;
 }
 .messageBox{
     position: absolute;
@@ -264,7 +267,7 @@ padding: 15px;
 }
 .scrolls{
     overflow-y: scroll;
-    height: 550px;
+    height: 496px;
 }
 .msgText{
     font-size: large;
@@ -287,7 +290,7 @@ padding: 15px;
 }
 .btn_up
 {
-    bottom: 50px;
+    bottom: 20px;
     position: relative;
 }
 #slide-out li i
