--- a/www/css/index.css
+++ b/www/css/index.css
@@ -74,8 +74,7 @@ padding-top: 5px;
 }
 .msg_icon
 {
-	 right: 3px;
-position: relative;
+right: 3px;
 width: 60px;
 padding: 15px;
 }
@@ -96,7 +95,7 @@ padding: 15px;
 }
 .notificationList .notificationText{
     display: inline-block;
-    width: Calc(100% - 100px);
+    width: 67%;
 }
 .home_profile_img
 {
@@ -160,7 +159,7 @@ padding: 15px;
     text-transform: uppercase;
 }
 .height100vh{
-    height: 91vh;
+    height: 95vh;
 }
 .restaurentImg{
     width: 90px;
@@ -296,4 +295,15 @@ padding: 15px;
 #slide-out li i
 {
     vertical-align: sub;
+}
+.navbar-fixed {
+    top: 0;
+    left: 0;
+    right: 0;
+}
+.btn{
+    box-shadow: none !important;
+}
+input[type=range] {
+    border: none !important;
 }
