--- a/www/css/index.css
+++ b/www/css/index.css
@@ -165,15 +165,19 @@ padding: 15px;
 .restaurentImg{
     width: 90px;
         padding: 2px;
+    height: 110px !important;
+    border-radius: 43px;
 }
+
 #cBack{
     position: absolute;
     top: 3px;
 }
 
-.restaurantOffset{
+#restaurentImgContainer .padding0:nth-child(5n) {
     margin-left: 11.666667% !important;
 }
+
 .pro_box
 {
     position: relative;
@@ -339,4 +343,7 @@ input[type=range] {
 .messageBox .collection .collection-item
 {
 	border-bottom: none;
+}
+nav .brand-logo{
+    left: 50%;
 }
