--- a/www/css/index.css
+++ b/www/css/index.css
@@ -364,3 +364,39 @@ nav .brand-logo{
     left: 0;
     
 }
+.posRelative{
+ position:relative;   
+}
+.filebtnInput{
+    position: absolute;
+    opacity: 0;
+    z-index: 10;
+    height: 35px;
+    width: 90px;
+    left: 0;
+    
+}
+.filebtn{
+    position: absolute;
+    z-index: 5;
+    height: 35px;
+    width: 90px;
+    left: 0;
+    
+}
+.imageBlock{
+        margin: 0 auto;
+    display: block;
+    width: 250px;
+}
+.cropit-preview {
+        background-color: #f8f8f8;
+        background-size: cover;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        margin-top: 7px;
+        width: 250px;
+        height: 250px;
+      }
+      
+      
