--- a/www/css/index.css
+++ b/www/css/index.css
@@ -405,3 +405,10 @@ nav .brand-logo{
  nav ul a:hover {
     background-color: inherit;
 }
+label.error{
+    position: static;
+    color:red;
+}
+.editModeImg{
+    padding: 10px;
+}
