--- a/www/css/index.css
+++ b/www/css/index.css
@@ -223,10 +223,9 @@ padding: 15px;
 }
 .edit_profile_bottom
 {
-    background-color: white;
+    background-color: #2b2b2a;
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 10px;
     text-align: justify;
 }
 .edit_profile_about_txt
@@ -276,6 +275,7 @@ padding: 15px;
 .scrolls{
     overflow-y: scroll;
     height: 496px;
+    margin: 0;
 }
 .msgText{
     font-size: large;
@@ -331,22 +331,29 @@ input[type=range] {
     z-index: 997;
     will-change: opacity;
 }
-.bubble_msg_right
+.msg-right .bubble_msg
 {
 	/*border: 1px #000 solid;*/
     padding: 9px !important;
     border-radius: 10px 0px 10px 10px;
     line-height: 1;
 	background-color: #e0e0e0;
-
+    float: left;
 }
-.bubble_msg_left
+.msg-left .bubble_msg
 {
 /*<!--	border: 1px #000 solid;-->*/
     padding: 9px !important;
     border-radius: 0px 10px 10px 10px;
     line-height: 1;
     background-color: rgba(0, 137, 236, 0.39);
+    float: right;
+}
+.msg-right img{
+    float: right;
+}
+.msg-left img{
+    float: left;
 }
 .messageBox .collection .collection-item
 {
@@ -427,3 +434,14 @@ div{
     -ms-user-select: none;
     user-select: none;
 }
+.aboutTextarea{
+    max-width:100%;height:150px;border: none;background-color: white;
+}
+.switch label input[type=checkbox]:checked + .lever:after {
+    top: initial;
+}
+.switch label .lever {
+    height: 21px;
+}
+
+.switch label .lever:after {top: 0;}
