--- a/www/css/index.css
+++ b/www/css/index.css
@@ -77,6 +77,7 @@ padding: 15px;
 .msg_a{
     position: absolute;
     right: -15px;
+    top: 0;
 }
 .menu_icon
 {
@@ -445,3 +446,9 @@ div{
 }
 
 .switch label .lever:after {top: 0;}
+.msgCount{
+    position: absolute;
+    top: -3px;
+    right: 19px;
+    color: orange;
+}
