--- a/www/css/index.css
+++ b/www/css/index.css
@@ -15,7 +15,7 @@ input{
     background-color: #fcfcfc !important;
 }
 body{
-	background-color:#f7f8f3;
+	background-color:#2f4158;
 }
 .margin0{
     margin: 0;
@@ -240,7 +240,7 @@ padding: 15px;
 }
 .onSwitch{
     border-radius: 20px;
-    color: #ff7800 !important;
+    color: #fff !important;
     padding: 0px 3rem;
 }
 .switchBox{
