--- a/www/libs/materialize/css/materialize.css
+++ b/www/libs/materialize/css/materialize.css
@@ -1308,7 +1308,7 @@
 }
 
 .light-green.accent-4 {
-  background-color: #fcfcfc !important;
+  background-color: #1a2b41 !important;
 }
 
 .light-green-text.text-accent-4 {
@@ -2108,7 +2108,7 @@
 }
 
 .grey.darken-4 {
-  background-color: #212121 !important;
+  background-color: #2f4158 !important;
   padding: 0 20px 0px 20px;
 }
 
@@ -2145,7 +2145,7 @@
 }
 
 .black-text {
-  color: #000000 !important;
+  color: #fff !important;
 }
 
 .white {
@@ -2594,7 +2594,7 @@ ul {
 }
 
 a {
-  color: #039be5;
+  color: #fff;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
 }
@@ -7523,7 +7523,7 @@ html {
   line-height: 1.5;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
-  color: rgba(0, 0, 0, 0.87);
+  color: #1a2b41;
 }
 
 @media only screen and (min-width: 0) {
@@ -8092,7 +8092,7 @@ small {
 .btn, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #ff7800;
+  background-color: #d9635b !important;
   text-align: center;
   letter-spacing: .5px;
   transition: .2s ease-out;
@@ -8100,7 +8100,7 @@ small {
 }
 
 .btn:hover, .btn-large:hover {
-  background-color: #ff7800;
+  background-color: #d9635b;
 }
 
 .btn-floating {
@@ -8698,7 +8698,7 @@ input[type=search],
 textarea.materialize-textarea {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+  border-bottom: 1px solid #fff;
   border-radius: 0;
   outline: none;
   height: 3rem;
@@ -8776,8 +8776,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #ff7800;
-  box-shadow: 0 1px 0 0 #ff7800;
+  border-bottom: 1px solid #fff;
+  box-shadow: 0 1px 0 0 #fff;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -8792,7 +8792,7 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #ff7800;
+  color: #fff;
 }
 
 input:not([type]).valid, input:not([type]):focus.valid,
@@ -8933,7 +8933,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field label {
-  color: #9e9e9e;
+  color: #fff;
   position: absolute;
   top: 0.8rem;
   left: 0.75rem;
@@ -9370,7 +9370,7 @@ form p:last-child {
 }
 
 .switch label input[type=checkbox]:checked + .lever {
-  background-color: #ff7800;
+  background-color: #1a2b41;
 }
 
 .switch label input[type=checkbox]:checked + .lever:after {
@@ -9597,7 +9597,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #ff7800;
+  background-color: #1a2b41;
   top: 10px;
   margin-left: -6px;
   -webkit-transform-origin: 50% 50%;
@@ -9647,7 +9647,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 24px;
   width: 24px;
   border-radius: 50%;
-  background-color: #ff7800;
+  background-color: #fff;
   -webkit-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
   margin: -9px 0 0 0;
@@ -9780,7 +9780,7 @@ select {
   height: calc(100% + 60px);
   height: -moz-calc(100%);
   padding-bottom: 60px;
-  background-color: #2b2b2a;
+  background-color: #1a2b41;
   z-index: 999;
   overflow-y: auto;
   will-change: left;
@@ -9807,7 +9807,7 @@ select {
 }
 
 .side-nav a {
-  color: #b2b3b1;
+  color: #fff;
   display: block;
   height: 64px;
   line-height: 64px;
